change compute.mustache file

--- a/src/main/resources/templates/compute.mustache
+++ b/src/main/resources/templates/compute.mustache
@@ -1,5 +1,6 @@
 <title>My application deployed automatically</title>
 <h1>Hello, World!</h1>
+<h2>First input is a integer list,second and third inputs are string lists and last input is boolean </h2>
 Result is {{result}}
 <form action="compute" method="post">
     <textarea name="input1" rows="10" cols="30"></textarea>
